--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Flowplayer library -->
+    <script src="//releases.flowplayer.org/7.2.4/flowplayer.min.js"></script>
+    <!-- Flowplayer hlsjs engine (light) -->
+    <script src="//releases.flowplayer.org/hlsjs/flowplayer.hlsjs.light.min.js"></script>
+    <link rel="stylesheet" href="https://video-react.github.io/assets/video-react.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
