--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <!-- Flowplayer library -->
-    <script src="//releases.flowplayer.org/7.2.4/flowplayer.min.js"></script>
     <!-- Flowplayer hlsjs engine (light) -->
-    <script src="//releases.flowplayer.org/hlsjs/flowplayer.hlsjs.light.min.js"></script>
-    <link rel="stylesheet" href="https://video-react.github.io/assets/video-react.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel='stylesheet' href='//vjs.zencdn.net/5.9.2/video-js.css'>
+    <script type='text/javascript' src='//vjs.zencdn.net/5.9.2/video.js'></script>
+    <script type='text/javascript' src='//cdn.viblast.com/vb/stable/viblast.js'></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
